Fix Title Alignment Bug

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 .title-wrap {
   color: whitesmoke;
   font-size: 1.9rem;
+  text-align: center;
 }
 
 body {
